# student-halls-rust

./: Cargo.toml  vercel.json
api/: lambda.rs  vercel.rs
src/: lib.rs  main.rs
src/api/: response.rs
src/db/: db.rs  mod.rs
src/middleware/: auth_guard.rs
src/models/: auth_models.rs  hall_models.rs  mod.rs  review_models.rs  university_models.rs  user_models.rs
src/routes/: hall_routes.rs  mod.rs  root_routes.rs  university_routes.rs  user_routes.rs
src/services/: mod.rs
src/services/hall/: hall_handlers.rs  mod.rs
src/services/university/: mod.rs  university_handlers.rs
src/services/user/: user_handlers.rs
